# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init.py__  __init__.py  cli.py  constants.py  engine.py  formatter.py  parser.py
gendiff/formatter/: formatter.py  json.py  plain.py
gendiff/scripts/: gendiff.py  gendiff.py.old
tests/: test_generate_diff.py
tests/fixtures/: file1_simple.json  file2_simple.json  output_json  step_6_output
