[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = ""
authors = ["Aleksandr Efimovskiy <bdf715@gmail.com>"]
packages = [
  { include = "gendiff" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
]
repository = "https://github.com/bdf715/python-project-lvl2"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
